# lumi-pilot

./: .gitignore  .ruff-usage.md  CLAUDE.md  README.md  __init__.py  agents.md  config.toml.example  main.py  pyproject.toml  ruff.toml  test_debug_output.py  test_enhanced_features.py  test_response_format.py
.claude/: settings.json
characters/: assistant.toml  assistant.yaml  lumi.toml  lumi.yaml
cli/: main.py
config/: settings.py
core/: __init__.py  application.py  models.py  protocols.py
docs/: hooks-setup.md
examples/: other_languages.md  printer_monitor_client.py  python_client.py  simple_grpc_test.py
http_gateway/: QUICKSTART.md  README.md  pyproject.toml  启动指南.md
http_gateway/http_gateway/: __init__.py  grpc_client.py  models.py  server.py
http_gateway/tests/: test_api.py
infrastructure/: __init__.py
infrastructure/camera/: __init__.py  capture.py
infrastructure/config/: __init__.py  settings.py
infrastructure/llm/: __init__.py  client.py  openai_client.py
infrastructure/logging/: __init__.py  logger.py
infrastructure/mcp/: __init__.py  client.py  factory.py  internal_server.py
infrastructure/mcp/client/: __init__.py  manager.py
infrastructure/mcp/server/: __init__.py  internal.py  models.py  tools.py
infrastructure/mcp/server/basic/: __init__.py  handlers.py  tools.py
infrastructure/mcp/server/printer/: __init__.py  client.py  handlers.py  tools.py
infrastructure/mcp/server/system/: __init__.py  handlers.py  tools.py
infrastructure/mcp/server/utility/: __init__.py  handlers.py  tools.py
infrastructure/vision/: __init__.py  analyzer.py
interfaces/: __init__.py
interfaces/cli/: __init__.py  commands.py
interfaces/grpc/: __init__.py  handlers.py  server.py
interfaces/grpc/interfaces/grpc/protos/: chat.proto
models/: llm_client.py
prompts/: chat_prompt.txt  printer_prompt.txt
prompts/printer_monitoring/: analysis_prompt.txt
protos/: lumi_pilot.proto
scripts/: debug_printer_connection.py  post_completion_hook.py  test_config_quick.py  test_config_toml.py  test_llm_debug.py  test_mcp_failure_scenarios.py  test_mcp_tools.py  test_printer_client.py  test_printer_full_workflow.py  test_printer_status_only.py  test_sse_parser.py
services/: __init__.py  chat_service.py
services/chat/: __init__.py  models.py  service.py
services/fault_detection/: __init__.py  models.py  service.py
services/printer_monitoring/: __init__.py  models.py  service.py
utils/: __init__.py  character_loader.py  logger.py  personality.py
