[project]
name = "lumi-pilot"
version = "0.2.0"
description = "现代化AI服务平台 - 支持多种AI服务和统一接口"
authors = [{name = "YaoTutu", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=23.0.0",
    "python-dotenv>=1.0.0",
    "httpx[socks]>=0.24.0",
    "tomli>=2.0.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "fastmcp>=0.1.0",
    "toml>=0.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
lumi-pilot = "interfaces.cli.commands:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py310']

# Ruff配置已移至 ruff.toml 文件

[tool.hatch.build.targets.wheel]
packages = ["core", "services", "infrastructure", "interfaces", "utils"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]
